RPG comments in specs

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
                 ],
                 "extensions": [
                     ".RPG",
-                    ".rpg"
+                    ".rpg",
+                    ".RPG38",
+                    ".rpg38"
                 ],
                 "configuration": "./language-configuration.json"
             }
