--- a/package.json
+++ b/package.json
@@ -16,6 +16,17 @@
     "contributes": {
         "languages": [
             {
+                "id": "bnd",
+                "aliases": [
+                    "BND",
+                    "Binder Language"
+                ],
+                "extensions": [
+                    ".bnd"
+                ],
+                "configuration": "./configurations/bnd.language-configuration.json"
+            },
+            {
                 "id": "cl",
                 "aliases": [
                     "CL",
@@ -129,6 +140,11 @@
         ],
         "grammars": [
             {
+                "language": "bnd",
+                "scopeName": "source.bnd",
+                "path": "./syntaxes/bnd.tmLanguage.json"
+            },
+            {
                 "language": "cl",
                 "scopeName": "source.cl",
                 "path": "./syntaxes/cl.tmLanguage.json"
@@ -192,7 +208,8 @@
         "DSPF",
         "MI",
         "MACHINE INTERFACE",
-        "ISERIES"
+        "ISERIES",
+        "BINDER LANGUAGE"
     ],
     "license": "MIT",
     "repository": {
