#67 RPGLE and CL comment toggle

--- a/configurations/cl.language-configuration.json
+++ b/configurations/cl.language-configuration.json
@@ -11,7 +11,8 @@
         ["[", "]"],
         ["(", ")"],
         ["\"", "\""],
-        ["'", "'"]
+        ["'", "'"],
+        [/*, */]
     ],
     // symbols that that can be used to surround a selection
     "surroundingPairs": [
@@ -20,5 +21,8 @@
         ["(", ")"],
         ["\"", "\""],
         ["'", "'"]
-    ]
+    ],
+    "comments": {
+        "blockComment": ["/*", "*/"]
+    }
 }
