#67 toggle comments for MI

--- a/configurations/mi.language-configuration.json
+++ b/configurations/mi.language-configuration.json
@@ -20,5 +20,8 @@
         ["(", ")"],
         ["\"", "\""],
         ["'", "'"]
-    ]
+    ],
+    "comments": {
+        "blockComment": ["/*", "*/"]
+    }
 }
