--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,21 @@ jobs:
   release:
     name: Release and publish
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
       - run: npm install
-      - uses: lannonbr/vsce-action@master
+      
+      - uses: actions/setup-node@v1
         with:
-          args: "publish -p $VSCE_TOKEN"
-        env:
-          VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
+          node-version: 14
+          registry-url: https://registry.npmjs.org/
+
+      - name: Install the dependencies
+        run: npm i
+
+      - name: Install vsce
+        run: npm i -g vsce
+
+      - name: Publish
+        run: vsce publish -p ${{ secrets.VSCE_TOKEN }}
