--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,11 @@ jobs:
       - name: Install the dependencies
         run: npm i
 
-      - name: Install vsce
-        run: npm i -g vsce
+      - name: Install vsce and open VSX
+        run: npm i -g vsce ovsx
+      
+      - name: Publish Open VSX
+        run: npx ovsx publish -p ${{ secrets.OPEN_VSX }}
 
-      - name: Publish
+      - name: Publish VS Code Marketplace
         run: vsce publish -p ${{ secrets.VSCE_TOKEN }}
