TESTING ... dont try to republish to vscode market

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Publish to Open VSX
         run: npx ovsx publish -p ${{ secrets.OPEN_VSX }}
 
-      - name: Publish to VS Code Marketplace
-        run: vsce publish -p ${{ secrets.VSCE_TOKEN }}
+      #- name: Publish to VS Code Marketplace
+      #  run: vsce publish -p ${{ secrets.VSCE_TOKEN }}
