--- a/package.json
+++ b/package.json
@@ -224,7 +224,8 @@
     },
     "icon": "images/icon.png",
     "devDependencies": {
-        "js-yaml": "^3.13.1"
+        "js-yaml": "^3.13.1",
+        "semver": "^7.3.5"
     },
     "keywords": [
         "RPG",
