--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,10 @@ jobs:
       - name: Install the dependencies
         run: npm i
 
+      - name: temp deploy fix got ovsx
+        run: npm i semver
+        # this will be fixed by next release...just don't want to re-tag and re-publish
+
       - name: Install vsce and Open VSX
         run: npm i -g vsce ovsx
 
@@ -28,9 +32,11 @@ jobs:
         run: |
           vsce publish -p ${{ secrets.VSCE_TOKEN }}
         continue-on-error: true
+        # TODO: remove this ^
 
       - name: Publish to Open VSX
         id: pub_ovsx
         run: |
           npx ovsx publish -p ${{ secrets.OPEN_VSX }}
         continue-on-error: true
+        # TODO: remove this ^
