ignore cmd in linguist

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
-*.py linguist-detectable=false
-*.clp linguist-detectable=false
 *.json linguist-detectable=true
+*.py linguist-detectable=false
+
+# linguist mismatch
+*.clp linguist-detectable=false
+*.cmd linguist-detectable=false
