include .rpgleinc extension
.rpgleinc is used for copy books

--- a/package.json
+++ b/package.json
@@ -150,11 +150,13 @@
                 "id": "rpgle",
                 "aliases": [
                     "RPGLE",
-                    "SQLRPGLE"
+                    "SQLRPGLE",
+                    "RPGLEINC"
                 ],
                 "extensions": [
                     ".rpgle",
-                    ".sqlrpgle"
+                    ".sqlrpgle".
+                    ".rpgleinc"
                 ],
                 "configuration": "./configurations/rpgle.language-configuration.json"
             }
