--- a/configurations/rpgle.language-configuration.json
+++ b/configurations/rpgle.language-configuration.json
@@ -90,5 +90,6 @@
     ],
     "comments": {
         "lineComment": "//"
-    }
+    },
+    "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)"
 }
