--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - run: npm install
 
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
@@ -21,7 +21,7 @@ jobs:
         run: npm i
 
       - name: Install vsce and Open VSX
-        run: npm i -g vsce ovsx
+        run: npm i -g @vscode/vsce ovsx
 
       - name: Publish to VS Code Marketplace
         id: pub_vsce
